--- a/chronicler/layer/package.json
+++ b/chronicler/layer/package.json
@@ -21,33 +21,35 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "ethers": "^6.8.1",
-    "hardhat": "^2.19.4",
-    "@openzeppelin/contracts": "^5.0.1",
-    "@supabase/supabase-js": "^2.38.4",
-    "ipfs-http-client": "^60.0.1",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "@openzeppelin/contracts": "^5.3.0",
+    "@supabase/supabase-js": "^2.51.0",
+    "axios": "^1.6.2",
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "compression": "^1.7.4",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
+    "ethers": "^6.15.0",
+    "express": "^5.1.0",
+    "hardhat": "^2.19.4",
+    "helmet": "^8.1.0",
+    "ipfs-http-client": "^60.0.1",
+    "joi": "^17.11.0",
+    "keccak256": "^1.0.6",
+    "merkle-tree": "^1.0.2",
+    "multihashes": "^0.4.21",
+    "node-cron": "^3.0.3",
+    "pg": "^8.11.3",
+    "redis": "^4.6.10",
+    "sequelize": "^6.35.1",
+    "socket.io": "^4.7.4",
+    "ts-jest": "^29.4.0",
+    "uuid": "^9.0.1",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1",
-    "joi": "^17.11.0",
-    "uuid": "^9.0.1",
-    "crypto": "^1.0.1",
-    "zod": "^3.22.4",
-    "axios": "^1.6.2",
-    "node-cron": "^3.0.3",
-    "socket.io": "^4.7.4",
-    "redis": "^4.6.10",
-    "pg": "^8.11.3",
-    "sequelize": "^6.35.1",
-    "merkle-tree": "^1.0.2",
-    "keccak256": "^1.0.6",
-    "multihashes": "^0.4.21"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/minimatch": "^6.0.0",
     "@types/node": "^20.10.0",
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
@@ -60,10 +62,14 @@
     "prettier": "^3.1.0",
     "typescript": "^5.3.2",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.9",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
     "hardhat-deploy": "^0.12.0",
     "hardhat-gas-reporter": "^1.0.9",
-    "solidity-coverage": "^0.8.5"
+    "solidity-coverage": "^0.8.5",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "@types/jest": "^30.0.0"
   },
   "engines": {
     "bun": ">=1.0.0"
@@ -80,4 +86,4 @@
   ],
   "author": "Chronicler Team",
   "license": "MIT"
-} 
+}
