--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,15 +6,36 @@
             "source.organizeImports": "explicit"
         }
     },
-    "editor.rulers": [79],
-    "python.linting.enabled": true,
-    "python.linting.lintOnSave": true,
-    "ruff.lint.run": "onSave",
-    "ruff.format.args": ["--line-length=79"],
-    "ruff.lint.args": ["--line-length=79"],
+    "editor.rulers": [
+        79
+    ],
     "editor.wordWrap": "off",
     "files.trimTrailingWhitespace": true,
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
-    "editor.detectIndentation": true
+    "editor.detectIndentation": true,
+    "[solidity]": {
+        "editor.defaultFormatter": "JuanBlanco.solidity",
+        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": "explicit"
+        }
+    },
+    "typescript.tsdk": "node_modules/typescript/lib",
+    "typescript.enablePromptUseWorkspaceTsdk": true,
+    "[typescript]": {
+        "editor.defaultFormatter": "vscode.typescript-language-features",
+        "editor.defaultFormatterOptions": {
+            "typescript": {
+                "tabSize": 4,
+                "useTabs": false,
+                "indentSize": 4,
+                "indentStyle": "space"
+            }
+        },
+        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": "explicit"
+        }
+    }
 }
