--- a/chronicler/client/pyproject.toml
+++ b/chronicler/client/pyproject.toml
@@ -3,7 +3,7 @@ name = "chronicler-python"
 version = "0.1.0"
 description = "Modular Python support for Chronicler with DSPy and web3"
 authors = [{ name = "Chronicler Team", email = "team@chronicleraudit.com" }]
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 
 dependencies = [
     "dspy",
@@ -14,4 +14,5 @@ dependencies = [
     "httpx",
     "pytest",
     "ruff",
+    "fastapi-mcp>=0.3.7",
 ]
