Create docs and decorators

--- a/chronicler/client/env.example
+++ b/chronicler/client/env.example
@@ -1,35 +1,31 @@
-# DSPy Configuration
-OPENAI_API_KEY=your_openai_api_key_here
-DSPY_MODEL=gpt-4
-DSPY_MAX_TOKENS=1000
-DSPY_TEMPERATURE=0.7
+# Chronicler Python Client Environment Configuration
 
-# Blockchain Configuration
-WEB3_PROVIDER_URI=https://sepolia.infura.io/v3/your_infura_key
-PRIVATE_KEY=your_private_key_here
-CHRONICLER_REGISTRY_ADDRESS=0x...
-CHRONICLER_AUDIT_LOG_ADDRESS=0x...
-CHRONICLER_ACCESS_CONTROL_ADDRESS=0x...
+# Network Configuration
+CHAIN_ID=1
+RPC_URL=http://localhost:8545
+
+# Contract Addresses (Required)
+REGISTRY_ADDRESS=0x1234567890123456789012345678901234567890
+AUDIT_LOG_ADDRESS=0x2345678901234567890123456789012345678901
+ACCESS_CONTROL_ADDRESS=0x3456789012345678901234567890123456789012
+
+# Database Configuration (Optional)
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_KEY=your-supabase-key
 
 # Service Configuration
-PORT=8000
-HOST=0.0.0.0
+IPFS_GATEWAY=https://ipfs.io
+DASHBOARD_PORT=3000
+
+# Audit Configuration
+AUDIT_ENABLED=true
+LOG_INPUT=true
+LOG_OUTPUT=true
+LOG_METADATA=true
+BATCH_SIZE=100
+TIMEOUT=30000
+RETRY_ATTEMPTS=3
+
+# Development Configuration
+DEBUG=false
 LOG_LEVEL=INFO
-ENVIRONMENT=development
-
-# Database (Optional)
-DATABASE_URL=postgresql://user:password@localhost:5432/chronicler
-
-# IPFS Configuration
-IPFS_URL=https://ipfs.infura.io:5001
-IPFS_PROJECT_ID=your_ipfs_project_id
-IPFS_PROJECT_SECRET=your_ipfs_project_secret
-
-# Monitoring
-SENTRY_DSN=your_sentry_dsn_here
-METRICS_ENABLED=true
-
-# Agent Configuration
-AGENT_NAME=chronicler-agent
-AGENT_ID=0x...
-DEFAULT_TOOL_ID=0x...
